crates/midnight-bindgen-macro/tests/ui/fail/unknown-type-node.stderr
error: failed to generate contract bindings: unknown type-name `Quantum` in ledger field `count`; this version of midnight-bindgen does not support it (known type-names: Boolean, Field, Uint, Bytes, Vector, Tuple, Struct, Enum, Alias, Opaque, Contract)
 --> tests/ui/fail/unknown-type-node.rs:5:5
  |
5 |     "../../../../crates/midnight-bindgen-macro/tests/ui/fixtures/unknown-type.json"
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
